# Five-Propeller-Underwater-Robot

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: architecture.md  code-review.md  control-algorithm.md  hardware.md  protocol.md  safety.md
docs/assets/: README.md
firmware/: CMakeLists.txt  README.md  unify_v1_0307.ioc
firmware/Core/Inc/: FreeRTOSConfig.h  MS5837.h  analysis_data.h  app_robot.h  main.h  mixer.h  motor_pwm.h  pid.h  robot_def.h  stm32f4xx_it.h
firmware/Core/Src/: MS5837.c  analysis_data.c  app_robot.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  mixer.c  (+5 more)
mechanical/: README.md
mechanical/solidworks/: 130半球罩.SLDPRT  130盖子.SLDPRT  130盖子2.SLDPRT  130盖子无孔.SLDPRT  130盖子无孔2.SLDPRT  5M螺栓.SLDPRT  VIOCEAN-T60（3kg推力）.step.SLDPRT  分隔板+连接件.SLDASM  垂推螺旋桨.SLDPRT  垂直推进器.SLDPRT  垂直推进器2.SLDPRT  垂直推进器3.SLDPRT  外径130x300密封舱2.SLDPRT  外径130x300密封舱总装2.SLDASM  外径130x300密封舱总装整体无桨叶.STEP.SLDPRT  头部圆壳.SLDPRT  尾部垂推连接件1.SLDPRT  尾部垂推连接件2.SLDPRT  水平推进器连接件.SLDPRT  水平推进器连接件2_2.SLDPRT  装配体（水平推进器简化）.SLDASM
simulation/python/: README.md  pyproject.toml  run_all_tasks.py
simulation/python/config/: robot_5thruster.json
simulation/python/docs/: dynamics_equations.md  model_notes.md
simulation/python/scripts/: run_task.py  smoke_test.py
simulation/python/src/underwater_5thruster_sim/: __init__.py  allocation.py  controllers.py  dynamics.py  math_utils.py  plotting.py  robot_params.py  tasks.py
simulation/ros/: README.md
tools/pc/: README.md  lora_pc.py
(+16 files in other folders)
