[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "underwater-5thruster-sim"
version = "0.1.0"
description = "Five-thruster underwater robot dynamics simulation and task controllers"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21", "matplotlib>=3.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
